--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "jspdf": "^2.5.1",
