--- a/package.json
+++ b/package.json
@@ -48,17 +48,20 @@
     "react": "^18",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.1.0",
     "uuid": "^11.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.23"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dropzone": "^4.2.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
