--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
+    "google-libphonenumber": "^3.2.42",
     "googleapis": "^154.1.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
+    "libphonenumber-js": "^1.12.10",
     "lucide-react": "^0.294.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
