--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/anthropic": "^2.0.1",
+    "@ai-sdk/openai": "^1.3.24",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -36,7 +37,8 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.8",
     "@types/uuid": "^10.0.0",
-    "ai": "^4.3.16",
+    "ai": "^4.3.19",
+    "chrono-node": "^2.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
@@ -49,6 +51,7 @@
     "jszip": "^3.10.1",
     "libphonenumber-js": "^1.12.10",
     "lucide-react": "^0.294.0",
+    "luxon": "^3.7.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -64,6 +67,7 @@
     "zod": "^3.25.23"
   },
   "devDependencies": {
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
