--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.8",
@@ -62,6 +64,7 @@
     "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^2.1.0",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
