--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "luxon": "^3.7.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
+    "resend": "^6.0.1",
     "sonner": "^2.0.5",
     "stripe": "^18.4.0",
     "tailwind-merge": "^2.1.0",
