--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "resend": "^6.0.1",
     "sonner": "^2.0.5",
