--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.12.1",
     "google-libphonenumber": "^3.2.42",
