--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "resend": "^6.0.1",
     "sonner": "^2.0.5",
